--- a/AoC1512/AoC1512.csproj
+++ b/AoC1512/AoC1512.csproj
@@ -20,4 +20,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
 </Project>
